unit testing done

--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline/byline.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline/byline.html
@@ -1,4 +1,5 @@
-<div data-sly-use.byline="com.adobe.aem.guides.wknd.core.models.Byline"
+<!--/* byline.html */-->
+<div data-sly-use.byline="com.adobe.aem.guides.wknd.core.models.Byline" 
     data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
     data-sly-test.hasContent="${!byline.empty}"
     class="cmp-byline">
